Updated by task 'AUTO_TM_MT_1721238908662'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/78a45facf5812c6c0377a62ce502373e93d64150

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: 914b822aae659d1d0f0b8a98480090ead99e102a
-workflow-type: ht
-source-wordcount: '11592'
+source-git-commit: b4e5443f9d6953bb9cfae3d0b2a527cf341ada43
+workflow-type: tm+mt
+source-wordcount: '11583'
 ht-degree: 100%
 
 ---
@@ -244,7 +244,7 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 | ----------- | ---------- | ------- | ---- |
 | **Relleno para zonas protegidas que no sean de producción** | Al crear un flujo de datos del conector de origen de Analytics en una zona protegida que no sea de producción, el relleno de las zonas protegidas que no sean de producción estará limitado a 3 meses. Permanecerá a los 13 meses para las zonas protegidas de producción. | N/A | 26 de abril de 2023 |
 | **Filtrado de filas y columnas para el streaming del conector de origen de Analytics** | El conector de origen de Analytics en Adobe Experience Platform ahora permite filtrar los datos de Analytics que se usan para rellenar perfiles en el [Perfil del cliente en tiempo real](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=es). El filtrado de nivel de fila reduce el número de eventos asociados a perfiles. El filtrado a nivel de columna ayuda a reducir la riqueza de los propios eventos, lo que permite optimizar el uso de derechos de perfil. Este filtrado solo se aplica a los datos enviados al perfil del cliente en tiempo real y al [Servicio de identidad](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=es). **El filtrado no afecta a los datos que se envían al lago de datos para su uso en aplicaciones como Customer Journey Analytics**. [Más información](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=es#filtering-for-profile) | N/A | 29 de marzo de 2023 |
-| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
+| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe.  | N/A | 31 de marzo de 2023 |
 | **Ofuscación de IP para la red Edge de Adobe Experience Platform** | Planes de Adobe para que la red Edge admita la ofuscación de IP para los datos enviados directamente a Adobe Experience Platform. Este cambio beneficia a los clientes que envían datos directamente a Platform para su uso en Customer Journey Analytics u otras soluciones de Platform. La confusión de IP se ajusta en el nivel de flujo de datos. Admite la eliminación del último octeto o de toda la dirección IP.<p>**Nota**: La confusión NO se aplica a los datos enviados a Adobe Analytics. Analytics sigue obteniendo la IP completa. El procesamiento de IP se sigue realizando en Analytics por separado. En el futuro, Adobe planea permitir que los datos de Analytics se ofusquen en el nivel de red Edge. | N/A | Lanzamiento de Adobe Experience Platform el 26 de abril de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | 29 de marzo de 2023 |
 | **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | <p>Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es#share-public-link)</p> <p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html?lang=es#company-preferences)</p> | 3 de mayo de 2023 | Junio de 2023 |
@@ -291,7 +291,7 @@ AN-288373; AN-305144; AN-309023; AN-310466; AN-311686; AN-311705; AN-312018; AN-
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
+| **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. [Más información](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) | N/A | 31 de marzo de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | **No disponible temporalmente** |
 | **Historias de datos en paneles móviles** | Las historias de datos le permiten añadir varias vistas de detalles personalizables a mosaicos en proyectos de cuadros de resultados móviles. Utilice historias de datos para profundizar en los controladores clave, las métricas relacionadas y los diferentes pasos a lo largo del recorrido del cliente. Puede desplazarse fácilmente por estas vistas para comprender toda la historia detrás de las métricas clave. [Más información](/help/analyze/mobile-app/create-scorecard.md#create-data-story) | N/A | 8 de marzo de 2023 |
 | **Fechas de caducidad del proyecto programado** | Puede establecer las fechas de caducidad máximas para los proyectos programados hasta un año, independientemente de la frecuencia de programación. | N/A | 8 de marzo de 2023 |
