--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -4,7 +4,7 @@ description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
 source-git-commit: 6eb1f639932a0b3c6406b7f832b85bf78480ce39
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5927'
 ht-degree: 100%
 
@@ -12,7 +12,7 @@ ht-degree: 100%
 
 # Notas de la versión de Adobe Analytics de 2024
 
-Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/es/products/adobe-experience-cloud-products.html). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
+Obtenga información sobre las últimas actualizaciones de la versión para los [productos de Adobe Experience Cloud](https://business.adobe.com/products/adobe-experience-cloud-products.html?lang=es). Obtenga la documentación de autoayuda más reciente: tutoriales y cursos sobre Experience League.
 
 ## Junio de 2024 {#june24}
 
@@ -63,7 +63,7 @@ AN-346470; AN-346850; AN-347227; AN-348145; AN-348564; AN-349001; AN-349008; AN-
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Nueva documentación para actualizar de Adobe Analytics a Customer Journey Analytics** | Para las organizaciones que actualizan de Adobe Analytics a Customer Journey Analytics, existen varias opciones de actualización y muchas consideraciones que se deben tener en cuenta según la implementación de Adobe Analytics actual y los objetivos a largo plazo de una organización. Ya hay disponibles nuevos recursos de documentación para ayudarle a comprender mejor:<ul><li>Las distintas rutas de actualización existentes</li><li>Qué rutas de actualización están disponibles según la implementación de Adobe Analytics actual de una organización</li><li>Las ventajas y desventajas de cada ruta de actualización</li><li>Guía paso a paso para cada ruta de actualización</li><li>Consideraciones para administrar datos históricos</li></ul>[Introducción a la actualización a Customer Journey Analytics](https://experienceleague.adobe.com/es/docs/analytics-platform/using/compare-aa-cja/upgrade-to-cja/cja-upgrade-getstarted) | | Ya disponible |
+| **Nueva documentación para actualizar de Adobe Analytics a Customer Journey Analytics** | Para las organizaciones que actualizan de Adobe Analytics a Customer Journey Analytics, existen varias opciones de actualización y muchas consideraciones que se deben tener en cuenta según la implementación de Adobe Analytics actual y los objetivos a largo plazo de una organización. Ya hay disponibles nuevos recursos de documentación para ayudarle a comprender mejor:<ul><li>Las distintas rutas de actualización existentes</li><li>Qué rutas de actualización están disponibles según la implementación de Adobe Analytics actual de una organización</li><li>Las ventajas y desventajas de cada ruta de actualización</li><li>Guía paso a paso para cada ruta de actualización</li><li>Consideraciones para administrar datos históricos</li></ul>[Introducción a la actualización a Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/analytics-platform/using/compare-aa-cja/upgrade-to-cja/cja-upgrade-getstarted) | | Ya disponible |
 | **Establecer `contextData` campos mediante XDM** | Los clientes que envían datos a Adobe Analytics a través de Experience Edge Network pueden [establecer valores de datos de contexto](https://experienceleague.adobe.com/es/docs/analytics/implementation/vars/page-vars/contextdata) directamente en XDM o en las partes de “datos” de la carga útil. |  | Ya disponible |
 | **API de creación de informes en tiempo real de Analytics 2.0** | La nueva API de creación de informes en tiempo real 2.0 de Adobe Analytics mejora la integración de los clientes y proporciona resultados rápidos de la creación de informes. Estos resultados se pueden utilizar mediante programación para que trabajen con informes básicos, de tendencias y de desglose. [Más información](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/reports/real-time/) | | 30 de mayo de 2024 |
 | **Complemento de colección Streaming Media: envíe datos web a Adobe Experience Platform Edge Network con el SDK web** | Ahora puede utilizar el SDK web de Adobe Experience Platform para enviar datos web de medios de streaming a Adobe Experience Platform Edge Network. Esta mejora le permite crear campañas más personalizadas y proporcionar contenido más personalizado, lo que da como resultado más datos de seguimiento sobre los que informar.<p>Este cambio proporciona un método de colección unificado para implementaciones web en todas las soluciones de Platform, como Customer Journey Analytics, Adobe Real-time CDP, Adobe Journey Optimizer y reenvío de eventos. Anteriormente, la única manera de enviar datos web de medios de streaming a Edge Network era mediante la API de Media Edge. <p>[Más información](https://experienceleague.adobe.com/en/docs/media-analytics/using/implementation/edge-recommended/media-edge-sdk/edge-web-sdk)</p> | | 29 de mayo de 2024 |
