--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -4,7 +4,7 @@ description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
 source-git-commit: 662b38f680e1a866204119ad3866d7da8e498e6c
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '7158'
 ht-degree: 100%
 
@@ -93,7 +93,7 @@ AN-352577; AN-352575; AN-352572; AN-352571; AN-352549; AN-352501; AN-352499; AN-
 | **Tabla de contenido de los proyectos de Workspace** | Ya está disponible una nueva tabla de contenido para los proyectos. La tabla de contenido proporciona vínculos que permiten a los usuarios saltar rápidamente a paneles y visualizaciones dentro del proyecto. La tabla de contenido se puede habilitar para proyectos individuales o para todos los proyectos de un usuario determinado.<p>Para obtener más información, consulte [Tabla de contenido del proyecto](/help/analyze/analysis-workspace/build-workspace-project/project-table-of-contents.md).</p><p>[Vea un vídeo de demostración de esta función](https://experienceleague.adobe.com/es/docs/analytics-learn/tutorials/analysis-workspace/navigating-workspace-projects/create-a-toc-in-analysis-workspace).</p> |  | 19 de junio de 2024 |
 | **Creación de hipervínculos para elementos de dimensión en una tabla de forma libre** | Puede crear hipervínculos para uno o varios elementos de dimensión a fin de que se pueda hacer clic en ellos dentro de una tabla de forma libre en Analysis Workspace. <p>Puede crear hipervínculos para elementos de dimensión que tengan valores de URL o puede crear direcciones URL personalizadas para elementos de dimensión que no tengan valores de URL.</p><p>Puede crear direcciones URL personalizadas dinámicas para varios elementos de dimensión mediante variables. Las variables pueden hacer referencia al valor de un elemento de dimensión o pueden hacer referencia a la dimensión de desglose.</p><p>Para obtener más información, consulte [Creación de hipervínculos para dimensiones en una tabla de forma libre](/help/analyze/analysis-workspace/visualizations/freeform-table/freeform-table-hyperlinks.md).</p><p>[Vea un vídeo de demostración de esta función](https://experienceleague.adobe.com/es/docs/analytics-learn/tutorials/analysis-workspace/tips-and-tricks/create-hyperlinks-in-freeform-tables).</p> |  | 19 de junio de 2024 |
 | **Configuración del administrador para controlar las cuentas y ubicaciones que se utilizan para exportación e importación** | La nueva pestaña [“Configuración de administración” del Administrador de ubicaciones](/help/components/locations/locations-manager.md#configure-company-wide-settings-administrators-only) permite a los administradores controlar si los usuarios pueden crear y editar cuentas y ubicaciones. Esta configuración se aplica cuando los usuarios [configuran cuentas de importación y exportación en la nube](/help/components/locations/configure-import-accounts.md) y [configuran ubicaciones de importación y exportación en la nube](/help/components/locations/configure-import-locations.md). <p>Los administradores también pueden limitar los tipos de cuentas (Google Cloud Platform, Azure RBAC, Amazon S3, etc.) que pueden crear y utilizar los usuarios.</p><p>Anteriormente, cualquier usuario podía crear, editar y utilizar cuentas y ubicaciones para cualquier tipo de cuenta.</p> | 12 de junio de 2024 | 20 de junio de 2024 |
-| **Compartir cuentas y ubicaciones que se utilizan para exportar e importar** | Ahora, los usuarios pueden poner las cuentas y ubicaciones que creen a disposición de todos los usuarios de su organización. Los propietarios de cuentas y ubicaciones y los administradores del sistema son los únicos que pueden editar y eliminar cuentas y ubicaciones.<p>Anteriormente, las cuentas y ubicaciones solo las podía usar el usuario que las creaba.</p><p>Esta configuración está disponible cuando los usuarios [configuran cuentas de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-accounts) y [configuran ubicaciones de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-locations). </p> | 12 de junio de 2024 | 20 de junio de 2024 |
+| **Compartir cuentas y ubicaciones que se utilizan para exportar e importar** | Ahora, los usuarios pueden poner las cuentas y ubicaciones que creen a disposición de todos los usuarios de su organización. Los propietarios de cuentas y ubicaciones y los administradores del sistema son los únicos que pueden editar y eliminar cuentas y ubicaciones.<p>Antes, las cuentas y ubicaciones solo las podía utilizar el usuario que las había creado.</p><p>Esta configuración está disponible cuando los usuarios [configuran cuentas de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-accounts) y [configuran ubicaciones de importación y exportación en la nube](https://experienceleague.adobe.com/es/docs/analytics/components/locations/configure-import-locations). </p> | 12 de junio de 2024 | 20 de junio de 2024 |
 | **Nueva guía de API de fuentes de datos** | Los [puntos finales de API de fuentes de datos de Adobe Analytics 2.0](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/data-sources/) proporcionan métodos para crear, ver, eliminar y cargar en cuentas de fuentes de datos. |  | Ya disponible |
 | **Nuevos métodos en la Guía de API de clasificaciones** | Se añadieron dos nuevos métodos para recuperar particiones de archivo a la Guía de API de clasificaciones.<ul><li>[Obtener partición del archivo de trabajo de clasificación](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/classifications/#get-classification-job-file-partition-list)</li><li>[Obtener parte del archivo del trabajo de exportación de clasificación](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/classifications/#get-classification-export-job-file-part)</li></ul> |  | Ya disponible |
 
