Updated by task 'AUTO_TM_MT_1726696294179'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/4d7e5d08120e79e9186f5e90eaa9cbf74ac2abac

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -3,10 +3,10 @@ title: Ver las notas de la versión de Adobe Analytics de 2020
 description: Notas de la versión de Analytics de 2020
 feature: Release Notes
 exl-id: 4a0bb2f4-23dd-4772-80fb-5cffbc80c26b
-source-git-commit: f68cf0de5e7689d8245572b060a3d81c3bf85072
+source-git-commit: 815e50e30fa6a0bce1bf78f33843070f96f52de8
 workflow-type: tm+mt
-source-wordcount: '12336'
-ht-degree: 97%
+source-wordcount: '12333'
+ht-degree: 96%
 
 ---
 
@@ -168,9 +168,9 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 * Se ha corregido un problema con las visitas de duplicado en las [!UICONTROL fuentes de datos]. (AN-226308)
 * Se ha corregido un problema en el cual las métricas calculadas con atribución de participación no arrojaban los valores adecuados. (AN-224642, AN-225190)
 * Se ha corregido un problema por el que los datos de segmentos se compartían de [!DNL Analytics] a [!DNL Audience Manager] y tardaban más de tres días en aparecer en [!DNL Audience Manager].(AN-226649)
-* Se ha corregido un problema que impedía usar el vínculo [!UICONTROL Analizar más] en los correos electrónicos de [!UICONTROL alertas inteligentes]. (AN-226823)
+* Se ha corregido un problema que impedía usar el vínculo [!UICONTROL Analizar más] en [!UICONTROL alertas] correos electrónicos. (AN-226823)
 * Se ha corregido un problema que impedía crear segmentos en un [!UICONTROL grupo de informes virtuales]. (AN-227039)
-* Se ha corregido un problema que impedía editar las alertas inteligentes. (AN-227162)
+* Se ha corregido un problema que impedía editar las alertas. (AN-227162)
 
 ### Correcciones adicionales de Adobe Analytics
 
@@ -213,7 +213,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 * Se han corregido varios problemas con las clasificaciones y sus reglas. (AN-223492, AN-220654, AN-219662 y AN-223260)
 * Se ha corregido un problema con el mismo segmento que arrojaba datos diferentes en un grupo de informes virtuales en comparación con el grupo de informes principal. (AN-201074)
 * Se ha corregido un problema que impedía descargar la configuración del grupo de informes. (AN-223690)
-* Se ha corregido un problema en [!UICONTROL Alertas inteligentes] que impedía el funcionamiento del vínculo de correo electrónico de _Exclusión de esta programación_. (AN-223875)
+* Se ha corregido un problema en [!UICONTROL alertas] que impedía que el vínculo de correo electrónico _Excluirse de esta programación_ funcionara. (AN-223875)
 * Se ha corregido un problema en que se mostraba una moneda incorrecta en un grupo de informes virtuales. (AN-224781)
 * Se ha corregido el problema de errores en los _componentes que faltaban_ en los grupos de informes virtuales. (AN-224782)
 * Se corrigió un problema en el cual desglosar una clasificación de una dimensión por otra podía devolver resultados vacíos cuando se usaba con una métrica calculada con la asignación de participación establecida. (AN-214089)
