Updated by task 'AUTO_HANDOFF_1727086970618'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/09ed6749d25f3d3e7514c75754bd39b49505df62

--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
 source-git-commit: 815e50e30fa6a0bce1bf78f33843070f96f52de8
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '7156'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -193,7 +193,7 @@ AN-327749; AN-332949; AN-342881; AN-343171; AN-343708; AN-344034; AN-345559; AN-
 
 * Se han corregido los siguientes problemas de clasificaciones: AN-343439; AN-343503; AN-343504; AN-343986; AN-344262; AN-344564; AN-345204; AN-345234
 * Se han corregido los siguientes problemas del Generador de reglas de clasificaciones: AN-341488; AN-342501; AN-345751
-* Se ha corregido el siguiente problema Alertas: AN-343466;
+* Se ha corregido el siguiente problema de alertas: AN-343466;
 * Se ha corregido el siguiente problema de segmentación: AN-342313
 * Se ha corregido el siguiente problema de Data Warehouse: AN-344292
 * Se han corregido los siguientes problemas de Fuentes de datos: AN-339545; AN-340092; AN-342124; AN-342862; AN-343737; AN-344035; AN-344329; AN-344703; AN-344721; AN-344940; AN-345180; AN-345196; AN-345225; AN-345236; AN-345326; AN-345631; AN-345659
